src/test/ui/static/static-reference-to-fn-2.stderr
error[E0716]: temporary value dropped while borrowed
  --> $DIR/static-reference-to-fn-2.rs:18:22
   |
LL | fn state1(self_: &mut StateMachineIter) -> Option<&'static str> {
   |           ----- has type `&mut StateMachineIter<'1>`
LL |     self_.statefn = &id(state2 as StateMachineFunc);
   |     -----------------^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^- temporary value is freed at the end of this statement
   |     |                |
   |     |                creates a temporary which is freed while still in use
   |     assignment requires that borrow lasts for `'1`

error[E0716]: temporary value dropped while borrowed
  --> $DIR/static-reference-to-fn-2.rs:24:22
   |
LL | fn state2(self_: &mut StateMachineIter) -> Option<(&'static str)> {
   |           ----- has type `&mut StateMachineIter<'1>`
LL |     self_.statefn = &id(state3 as StateMachineFunc);
   |     -----------------^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^- temporary value is freed at the end of this statement
   |     |                |
   |     |                creates a temporary which is freed while still in use
   |     assignment requires that borrow lasts for `'1`

error[E0716]: temporary value dropped while borrowed
  --> $DIR/static-reference-to-fn-2.rs:30:22
   |
LL | fn state3(self_: &mut StateMachineIter) -> Option<(&'static str)> {
   |           ----- has type `&mut StateMachineIter<'1>`
LL |     self_.statefn = &id(finished as StateMachineFunc);
   |     -----------------^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^- temporary value is freed at the end of this statement
   |     |                |
   |     |                creates a temporary which is freed while still in use
   |     assignment requires that borrow lasts for `'1`

error[E0716]: temporary value dropped while borrowed
  --> $DIR/static-reference-to-fn-2.rs:42:19
   |
LL |         statefn: &id(state1 as StateMachineFunc)
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ creates a temporary which is freed while still in use
LL |     }
LL | }
   | -- borrow later used here
   | |
   | temporary value is freed at the end of this statement
   |
   = note: consider using a `let` binding to create a longer lived value

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0716`.
